Bug 161190 - LibreOffice Calc crashes if you export a spreadsheet as PDF with "whole sheet export" option enabled.
Summary: LibreOffice Calc crashes if you export a spreadsheet as PDF with "whole shee...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.2.3.2 release
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Julien Nabet
URL:
Whiteboard: target:24.8.0 target:24.2.5
Keywords: haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2024-05-20 19:47 UTC by Marco
Modified: 2024-06-21 13:07 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (12.86 KB, text/plain)
2024-05-21 08:58 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marco 2024-05-20 19:47:58 UTC
Description:
FILESAVE: When you try to export any spreadsheet in Calc as PDF with "whole sheet export" box checked, LibreOffice crashes. It only happens with this option enabled, if it's exported without it, it works normally. Currently running the flatpak version.

Steps to Reproduce:
1. Create any document in LibreOffice Calc.
2. Click on 'File' tab and 'Export as PDF'.
3. Select the 'Whole sheet export' option.
4. Export the document.

Actual Results:
A dialog about LibreOffice crash appears.

Expected Results:
Export the spreadsheet as PDF in the selected location.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 24.2.3.2 (X86_64)
Build ID: 420(Build:2)
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Flatpak version
Fedora Linux 40
Comment 1 raal 2024-05-20 21:37:46 UTC
No repro with Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6d5d9eaa61505cebaf3bde4bfc157d8e19fec8de
CPU threads: 4; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded Jumbo
Comment 2 m_a_riosv 2024-05-20 21:48:38 UTC
Not reproducible with
Version: 24.2.3.2 (X86_64) / LibreOffice Community
Build ID: 433d9c2ded56988e8a90e6b2e771ee4e6a5ab2ba
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 3 Julien Nabet 2024-05-21 08:58:24 UTC
Created attachment 194240 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 4 Julien Nabet 2024-05-21 08:59:01 UTC
Remark: if "Whole sheet export" is disabled, there's no crash.
Comment 5 Julien Nabet 2024-05-21 09:01:40 UTC
I gave a try with https://gerrit.libreoffice.org/c/core/+/167890
Comment 6 Julien Nabet 2024-05-21 09:06:57 UTC
Regression from f3bfe66fb54190fee6ac579835c03c2b4a2735d0
tdf#159094 sc: fix failure when exporting media files to PDF
Comment 7 Commit Notification 2024-05-21 12:07:05 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7da5bb1ff4a691fb5b55a4bccc0f6c87c9e17692

tdf#161190: fix crash when exporting spreadsheet as PDF...

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Julien Nabet 2024-05-21 12:15:47 UTC
Fix waiting for review for 24.2 branch here:
https://gerrit.libreoffice.org/c/core/+/167897
Comment 9 Commit Notification 2024-06-21 13:07:29 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/aff8f97d1bc908bd8637d5cb61f7ea82c376c8b9

tdf#161190: fix crash when exporting spreadsheet as PDF...

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.