tdf#161190: fix crash when exporting spreadsheet as PDF...

with "whole sheet export" option'

See bt here:
https://bug-attachments.documentfoundation.org/attachment.cgi?id=194240

Change-Id: I453882be5c8bb761a722482f9c94a2b2bb5c7dd4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167890
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Jenkins
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167897
Reviewed-by: Eike Rathke <erack@redhat.com>